fix text overlap on grid view

--- a/source/_patterns/04-sites/mabel/_mabel.scss
+++ b/source/_patterns/04-sites/mabel/_mabel.scss
@@ -208,6 +208,7 @@ body.page-islandora-object {
   /* grid view */
   .islandora-objects-grid-item {
     font-size: $font-size--smaller;
+    break-word: break-all;
   }
 
   /* image viewer on single object page */
